src/objects/PromoterioSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Subject_Starting__c</fullName>
        <label>Case Subject Starting</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debug__c</fullName>
        <label>Debug</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fetch_All__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fetch All</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Run_On__c</fullName>
        <label>Last Run On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Run_Date__c</fullName>
        <label>Previous Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specific_Campaign_ID__c</fullName>
        <label>Specific Campaign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Promoter.io Settings</label>
</CustomObject>